# AI-agent-hands-on-tutorial

./: .gitignore  Agent_Skills_Comparative_Study.ipynb  README.md  pyproject.toml
docs/Session4/: additional_test_design.md  session4_design_spec.md
docs/Session4_artifacts/: BASELINE_REPORT.md  COMPARISON_ANALYSIS_REVISED.md  SKILLED_REPORT.md
skills/recency-awareness/: SKILL.md
skills/search-strategy/: SKILL.md
skills/source-validation/: SKILL.md
